--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 </head>
 <body>
     <div class="weather-app" id="weather-app">
@@ -15,8 +16,8 @@
             <div>
                 <h1 class="temp" id="temp">16&#176;</h1>
                 <div class="city-time" id="city-time">
-                    <h1 class="name" id="name">Delhi</h1>
-                    <small>
+                    <h1 class="name" id="name"></h1>
+                    <small>  
                         <span class="time" id="time">06:09</span>
                         -
                         <span class="date" id="date">
@@ -31,13 +32,9 @@
             </div>
         </div>
         <div class="panel" id="panel">
-            <form id="locationInput">
-                <input type="text" class="search" id="search" placeholder="Search Location..." />
+            <form id="locationInput" autocomplete="off">
+                <input type="text"  class="search" id="search" placeholder="Search Location..." />
                 <button type="submit" class="submit" id="submit"> 
-                    Search
-                    <!-- <i class="fas fa-search"></i> -->
-                    <!-- <i class='bx bx-search'></i> -->
-                    <!-- <box-icon name='search' flip='horizontal' ></box-icon> -->
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </button>
             </form>
